Fixed styling on programme tag when viewed on mobile

--- a/app/components/dashboard_course_component/dashboard_course_component.scss
+++ b/app/components/dashboard_course_component/dashboard_course_component.scss
@@ -37,6 +37,10 @@
 
   .ncce-activity-list__tags {
     margin: 0;
+
+    strong {
+      display: block;
+    }
   }
 
   .dashboard-course-component__format {
